kubernetes/manifests/pod-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-pvc
spec:
  volumes:
    - name: pvc-name
      persistentVolumeClaim:
        claimName: pvc-name
  containers:
    - name: pod-with-pvc
      image: busybox:latest
      volumeMounts:
        - mountPath: "/home"
          subPath: pvc
          name: pvc-name
