kubernetes/manifests/istio-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: example-virtual-service
spec:
  gateways:
  - istio-system/default-gateway
  hosts:
  - example-virtual-service.mydomain.hu
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: destination-svc
        port:
          number: 8080
